<resources>
    <string name="app_name">Ôn thi GPLX A1</string>
    <string name="ques_1">Người điều khiển phương tiện giao thông đường bộ mà trong cơ thể có chất ma túy có bị nghiêm cấm hay không?</string>
    <string name="explain_1">Gặp đáp án có “Bị Nghiêm Cấm” thì chọn là chắc chắn đúng.</string>
    <string name="ans_1_1">Bị nghiêm cấm</string>
    <string name="ans_1_2">Không bị nghiêm cấm</string>
    <string name="ans_1_3">Không bị nghiêm cấm, nếu có chất ma túy ở mức nhẹ, có thể điều khiển phương tiện tham gia giao thông.</string>
    <string name="ques_2">Hành vi điều khiển xe cơ giới chạy quá tốc độ quy định, giành đường, vượt ẩu có bị nghiêm cấm hay không?</string>
    <string name="explain_2">Điều khiển xe cơ giới chạy quá tốc độ quy định, giành đường, vượt ẩu là hành vi bị nghiêm cấm dựa theo Khoản 11 Điều 8 Luật Giao thông đường bộ 2008.</string>
    <string name="ans_2_1">Bị nghiêm cấm tùy từng trường hợp</string>
    <string name="ans_2_2">Không bị nghiêm cấm</string>
    <string name="ans_2_3">Bị nghiêm cấm.</string>
    <string name="ques_3">Bạn đang lái xe phía trước có một xe cứu thương đang phát tín hiệu ưu tiên bạn có được phép vượt hay không?</string>
    <string name="explain_3">Xe cứu thương thuộc diện phương tiện xe ưu tiên, có phát tín hiệu ưu tiên. Bắt buộc các phương tiện khác phải nhường đường và không được vượt. Ngoại trừ các xe theo luật định như: Cứu hỏa, Quân Sự, Công An.</string>
    <string name="ans_3_1">Không được vượt.</string>
    <string name="ans_3_2">Được vượt khi đang đi trên cầu.</string>
    <string name="ans_3_3">Được phép vượt khi đi qua nơi giao nhau có ít phương tiện cùng tham gia giao thông.</string>
    <string name="ans_3_4">Được vượt khi đảm bảo an toàn.</string>
    <string name="ques_4">Ở phần đường dành cho người đi bộ qua đường, trên cầu, đầu cầu, đường cao tốc, đường hẹp, đường dốc, tại nơi đường bộ giao nhau cùng mức với đường sắt có được quay đầu xe hay không?</string>
    <string name="explain_4">Gặp đáp án có “KHÔNG ĐƯỢC PHÉP” thì chọn ngay là chắc chắn đúng.</string>
    <string name="ans_4_1">Được phép</string>
    <string name="ans_4_2">Không được phép</string>
    <string name="ans_4_3">Tùy từng trường hợp.</string>
    <string name="ques_5">Người điều khiển xe mô tô hai bánh, ba bánh, xe gắn máy có được phép sử dụng xe để kéo hoặc đẩy các phương tiện khác khi tham gia giao thông không?</string>
    <string name="explain_5">Khoản 3, Điều 30 - Luật Giao thông đường bộ năm 2008 quy định người điều khiển xe mô tô hai bánh, xe mô tô ba bánh, xe gắn máy không được thực hiện các hành vi sau: Sử dụng xe để kéo, đẩy xe khác, vật khác, mang, vác và chở vật cồng kềnh</string>
    <string name="ans_5_1">Được phép</string>
    <string name="ans_5_2">Nếu phương tiện được kéo, đẩy có khối lượng nhỏ hơn phương tiện của mình</string>
    <string name="ans_5_3">Tùy trường hợp</string>
    <string name="ans_5_4">Không được phép.</string>
    <string name="ques_6">Khi điều khiển xe mô tô hai bánh, xe mô tô ba bánh, xe gắn máy, những hành vi buông cả hai tay; sử dụng xe để kéo, đẩy xe khác, vật khác; sử dụng chân chống của xe quệt xuống đường khi xe đang chạy có được phép không?</string>
    <string name="explain_6">Tất cả hành vi buông cả hai tay; sử dụng xe để kéo, đẩy xe khác, vật khác; sử dụng chân chống của xe quệt xuống đường khi xe đang chạy là hành động gây mất an toàn giao thông nghiêm trọng.</string>
    <string name="ans_6_1">Được phép</string>
    <string name="ans_6_2">Tùy trường hợp</string>
    <string name="ans_6_3">Không được phép.</string>
    <string name="ques_7">Người ngồi trên xe mô tô hai bánh, ba bánh, xe gắn máy khi tham gia giao thông có được mang, vác vật cồng kềnh hay không?</string>
    <string name="explain_7">Người ngồi trên xe mô tô hai bánh, ba bánh, xe gắn máy khi tham gia giao thông KHÔNG ĐƯỢC mang, vác vật cồng kềnh.</string>
    <string name="ans_7_1">Được mang, vác tùy trường hợp cụ thể</string>
    <string name="ans_7_2">Không được mang, vác</string>
    <string name="ans_7_3">Được mang, vác nhưng phải đảm bảo an toàn</string>
    <string name="ans_7_4">Được mang, vác tùy theo sức khỏe của bản thân.</string>
    <string name="ques_8"> Người ngồi trên xe mô tô hai bánh, xe mô tô ba bánh, xe gắn máy khi tham gia giao thông có được bám, kéo hoặc đẩy các phương thiện khác không?</string>
    <string name="explain_8">Người ngồi trên xe mô tô hai bánh, xe mô tô ba bánh, xe gắn máy khi tham gia giao thông không được bám, kéo hoặc đẩy các phương thiện khác.</string>
    <string name="ans_8_1">Được phép</string>
    <string name="ans_8_2">Được bám trong trường hợp phương tiện của mình bị hỏng</string>
    <string name="ans_8_3">Được kéo, đẩy trong trường hợp phương tiện khác bị hỏng</string>
    <string name="ans_8_4">Không được phép.</string>
    <string name="ques_9">Người ngồi trên xe mô tô hai bánh, xe mô tô ba bánh, xe gắn máy khi tham gia giao thông có được sử dụng ô khi trười mưa hay không?</string>
    <string name="explain_9">Tham gia giao thông không được sử dụng ô/dù. Gây nguy hiểm khi gió giật mạnh.</string>
    <string name="ans_9_1">Được sử dụng</string>
    <string name="ans_9_2">Chỉ người ngồi sau được sử dụng</string>
    <string name="ans_9_3">Không được sử dụng</string>
    <string name="ans_9_4">Được sử dụng nếu không có áo mưa.</string>
    <string name="ques_10">Người điều khiển xe mô tô hai bánh, xe gắn máy có được đi xe dàn hàng ngang; đi xe vào phần đường dành cho người đi bộ và phương tiện khác; sử dụng ô, điện thoại di động, thiết bị âm thanh (trừ thiết bị trợ thính) hay không?</string>
    <string name="tip11">1. Câu khái niệm "Phương tiện giao thông cơ giới đường bộ" chọn "Kể cả xe máy điện".\n2. Câu khái niệm "Phương tiện giao thông thô sơ đường độ" chọn "Kể cả xe đạp máy".\n3. Câu khái niệm "Người điều khiển giao thông" là "Cảnh sát giao thông".\n4. Câu khái niệm "Phần đường xe chạy" chọn câu không có chữ "An toàn giao thông"\n5. Câu khái niệm "Làn đường" chọn câu có chữ "An toàn giao thông".\n6. Các câu "Đổ xe: không có giới hạn về thời gian và Dừng xe có giới hạn thời gian" chọn câu số 2.\n7. Về nồng độ cồn, trong máu = 50, trong khí thở = 0,25 hoặc không có gì cả trong máu và khí thở.\n8. Dừng xe, đỗ xe cách lề đường, hè phố không quá 0.25m.\n9. Giữ khoảng cách 5m với đường sắt.\n10. Sử dụng giấy phép lái xe giả cấm 05 năm.\n11. Chọn "Cơ quan quản lý giao thông" đối với các trường hợp Xe quá tải, xe quá khổ và xe vận chuyển hàng nguy hiểm.\n12. Chọn "UBND cấp tỉnh" đối với trường hợp cấm đi, cấm đỗ, cấm dừng, đường ngược chiều.\n13. Loại giấy tờ mang theo: Giấy phép lái xe phù hợp với loại xe.\n14. Độ tuổi lấy bằng theo hạng (mỗi hạng cách nhau 3 tuổi): 16: xe dưới 50cm3; 18: Hạng A, B; 21: Hạng C; 24: Hạng D, FC; 27: Hạng E.\n15. Độ tuổi tối đa người lái xe ô tô hạng E: Nam 55 tuổi và nữ 50 tuổi.\n16. Không lái xe liên tục quá 4 giờ.\n17. Gặp câu hỏi về hạng FE thì chọn Câu 1, hạng FC thì chọn Câu 2.\n18. Tốc độ giới hạn của xe: Bên ngoài khu dân cư 80km/h nếu xe bé hơn 3.5 tấn, 70km/h nếu xe lớn hơn 3.5 tấn.\n19. Tốc độ của xe ô tô trên đường cao tốc, bạn lấy tốc độ lớn nhất trong câu hỏi rồi trừ cho 30 thì sẽ ra đáp án đúng.</string>
    <string name="tip2">1. Đối với các câu có biển báo hiệu lệnh được đặt trước ngã ba, ngã tư. Chọn câu 1 nếu câu hỏi 1 dòng, câu 3 nếu câu hỏi có 2 dòng.\n2. Biển báo cấm máy kéo thì không cấm ô tô tải và ngược lại.\n3. Biển báo cấm rẽ trái thì cấm quay đầu và biển cấm quay đầu thì không cấm rẽ trái.</string>
    <string name="tip3">1. Đối với câu hỏi liên quan đến việc điều khiển của CSGT, CSGT giơ tay thẳng lên thì các loại xe phải đứng lại, đưa 1 hoặc 2 tay giang ngang thì xe trước và đằng sau phải đứng lại.
        \n2. Đường giao nhau có vòng xuyến nhường bên trái không có vòng xuyến nhường bên phải.
        \n3. Thấy xuất hiện \"Công an\" thì chọn câu số 3.
        \n4. Xe nào đã vào ngã tư thì xe đó có quyền ưu tiên đi trước cao nhất.
        \n5. Tiếp đó đến các xe ưu tiên. Trong các xe ưu tiên thì xe cứu hỏa có ưu tiên cao nhất, sau đó đến xe quân sự, xe công an, xe cứu thương.
        \n6. Tiếp đó nếu cùng là xe ưu tiên hoặc cùng là xe không ưu tiên thì xét đến đường ưu tiên, tức là xe nào nằm trên đường ưu tiên thì có quyền đi trước.
        \n7. Xe nào không vướng xe khác ở bên phải có quyền đi trước.
        \n8. Thứ tự ưu tiên tiếp theo: xe rẽ phải -> xe đi thẳng -> xe rẽ trái
    </string>
    <string name="tipGioiThieu">Hiện nay, Trong việc thi bằng lái xe máy thì phần thi thực hành chấm điểm tự động bằng chip. Do máy tự động chấm điểm nên việc thi thực hành tỷ lệ trượt nhiều hơn so với trước. Qua quá trình tổ chức thi sát hạch qua rất nhiều học viên đúc kết ra một số mẹo cần chuẩn bị trước để thi đảm bảo đỗ 100%
        \n\n1.Tập trước vòng số 8 ở nhà. Phần thi thực hành trượt nhiều nhất là ở phần thi vòng số 8, Do đó, việc bạn đã biết đi xe máy thành thạo nhưng chưa tập qua vòng số 8 thì cũng rất dễ bị trượt. Bạn nên tập qua vòng số 8 càng nhiều lần càng tốt, ít nhất là lúc đi xe vào vòng số 8 không còn cảm thấy loạng choạng.
        \n2.Hôm thi lên sân thi thật sớm. Tại sao chúng tôi lại khuyên bạn như vậy? Bởi vì xe của bạn thì bạn quen với nó, bạn đi rất ngon lành. Nhưng xe của sân thi thì khác nhiều đấy, nếu bạn không đến sớm để làm quen với nó thì cũng rất dễ trượt. Hơn nữa, buổi thi thường sẽ có rất đông người. Nếu bạn đến sớm thì không phải chờ lâu mới được tập xe. Còn nếu đến muộn thì khả năng phải xếp hàng dài dài mới đến lượt mình.
        \n3.Cách đi để không bị chạm vạch Đi xe vào từ mép ngoài bên trái, bởi vì như thế thì bánh sau mới không bị đè lên vạch. Nếu bạn đi vào từ mép ngoài bên phải thì nhìn bánh trước vào rất ngon lành, nhưng rất tiếc bánh sau sẽ bị đè lên vạch ngay. Tương tự lúc ra khỏi vòng số 8 cũng như vậy. Bạn phải cho xe ra từ mép ngoài bên trái, nếu không bánh sau của xe cũng sẽ đè lên vạch.
        \nLưu ý: Lúc thi thực hành bạn nên để xe ở số 3 mà đi. Bởi vì số 4 thì có thể sẽ hơi yếu, nhưng số 1,2 thì sẽ bị giật mạnh. Phần đường gồ ghề bạn nên để số 3 đi và nên đi chậm chậm vừa phải nếu không muốn bay luôn cả người và xe ra ngoài.
    </string>
    <string name="tipvongso8">- Khi nghe gọi tên vào thị thực hành bài thi sát hạch lái xe mô tô thí sinh nhận xe, đội mũ bảo hiểm, gạt chống xe và nổ máy đưa xe vào vị trí xuất phát.
\n- Trong phần thi số 1 thí sinh phải nhớ nguyên tắc vào 8 ra 3, phải chạy đủ vòng. Nên chạy với tốc độ vừa phải trong suốt lộ trình.
\n- Khi nghe hiệu lệnh của người chấm thi thí sinh bắt đầu phần thi số 1 của bài thi thực hành thi sát hạch lái xe mô tô.
\n- Gài số vào hình, xuất phát rẽ phải đi 1 vòng số 8 theo mũi tên đỏ sau đó vòng ra cửa số 2 theo hướng mũi tên xanh.
\nLưu ý: Trong phần thi này thí sinh nên để số 2 đi luôn cho đầm máy. Khi chạy sa hình số 8, thí sinh nên hạ nhẹ ga xuống. Tuy nhiên tốc độ không nên quá chậm, nếu chạy nhanh thí sinh có thể rà thắng từ từ để phần bánh trước của xe bám vào vành ngoài của vòng số 8. Đây là phần thi khó nhất của bài thi thực hành thi sát hạch lái xe mô tô và giám khảo cũng thường quan sát kỹ phần thi này nên các bạn cần lưu ý.
    </string>
    <string name="tipdivaoduonghep">Trong phần này đường đi khá hẹp nên các bạn thí sinh cần lưu ý chỉ nên đi với tốc độ vừa phải và đi giữa đường để tránh bị chạm vạch.</string>
    <string name="tipchayduongquanhco">Trong phần 3 của bài thi thực hành thi sát hạch lái xe mô tô, thí sinh nên nhảy ga đều đặn để xe chạy nhịp nhàng. Phần thi này đòi hỏi học viên cần có kỹ thuật đi vòng cua.</string>
    <string name="tipchayduonggoge">Đây là phần thi thực hành cuối cùng. Các thí sinh phải giữ vững tay lái của mình tránh tình trạng mất lái, không nên đi với tốc độ quá chậm vì sẽ dễ ngã xe ảnh hưởng đến bài thi.</string>
</resources>